# flappy-bird

./: .gitignore  CMakeLists.txt
dependencies/SDL3/SDL3/: CMakeCache.txt  CPackConfig.cmake  CPackProjectConfig.cmake  CPackSourceConfig.cmake  Makefile  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake  cmake_install.cmake  cmake_uninstall.cmake  libSDL3.0.dylib  libSDL3.dylib  sdl3.pc
include/core/: Engine.hpp  Entity.hpp  GameObject.hpp  InputManager.hpp  Renderer.hpp  TextureManager.hpp
include/game/: Background.hpp  Base.hpp  Flappy.hpp
include/utils/: Vector.hpp
src/: main.cpp
src/core/: Engine.cpp  Entity.cpp  InputManager.cpp  Renderer.cpp  TextureManager.cpp
src/game/: Background.cpp  Base.cpp  Flappy.cpp
src/utils/: Vector.cpp
